--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
   "homepage": "https://github.com/xyqfer/server1#readme",
   "dependencies": {
     "got": "^11.5.1",
+    "lodash": "^4.17.19",
+    "rss-parser": "^3.9.0",
     "simple-git": "^2.14.0"
   }
 }
