--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   },
   "homepage": "https://github.com/xyqfer/server1#readme",
   "dependencies": {
+    "cheerio": "^1.0.0-rc.3",
     "got": "^11.5.1",
     "lodash": "^4.17.19",
     "rss-parser": "^3.9.0",
