--- a/.github/workflows/wsj.yml
+++ b/.github/workflows/wsj.yml
@@ -2,7 +2,7 @@ name: WSJ Cron
 
 on:
   schedule:
-    - cron: "55 0,2,4,6,8,10,12,14 * * *"
+    - cron: "55 0-14 * * *"
 
 jobs:
   build:
@@ -25,5 +25,7 @@ jobs:
         GIT_PASSWORD: ${{ secrets.GIT_PASSWORD }}
         GIT_USER_EMAIL: ${{ secrets.GIT_USER_EMAIL }}
         GIT_USER_NAME: ${{ secrets.GIT_USER_NAME }}
-        NOTIFICATION_URL: ${{ secrets.NOTIFICATION_URL }}
+        LARK_APP_ID: ${{ secrets.LARK_APP_ID }}
+        LARK_APP_SECRET: ${{ secrets.LARK_APP_SECRET }}
+        LARK_USER: ${{ secrets.LARK_USER }}
         RSS_HOST: ${{ secrets.RSS_HOST }}
