--- a/.github/workflows/wsj.yml
+++ b/.github/workflows/wsj.yml
@@ -20,7 +20,7 @@ jobs:
       with:
         node-version: ${{ matrix.node-version }}
     - run: npm i
-    - run: node wsj.js
+    - run: node noop.js
       env:
         GIT_PASSWORD: ${{ secrets.GIT_PASSWORD }}
         GIT_USER_EMAIL: ${{ secrets.GIT_USER_EMAIL }}
