--- a/.github/workflows/leetcode.yml
+++ b/.github/workflows/leetcode.yml
@@ -20,7 +20,7 @@ jobs:
       with:
         node-version: ${{ matrix.node-version }}
     - run: npm i
-    - run: node leetcode.js
+    - run: node noop.js
       env:
         LARK_APP_ID: ${{ secrets.LARK_APP_ID }}
         LARK_APP_SECRET: ${{ secrets.LARK_APP_SECRET }}
